--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/crear.xhtml
@@ -18,14 +18,10 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form>
-                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                    <p:outputLabel value="Esta ayuda sirve un monton"/>
-                </p:dialog>
-                <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>                    
                 <div class="EmptyBox20"></div>
                 <p:panelGrid columns="2" class="Container50 Responsive" id="p1">
                     <p:outputLabel for="carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
-                    <p:inputMask id="carnet" mask="AA999999" value="#{gestionMatriculaController.matriculaNuevo.mtCarnet}"></p:inputMask>
+                    <p:inputText id="carnet" value="#{gestionMatriculaController.idAlumno}" disabled="true"></p:inputText>
                     <p:outputLabel for="nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu id="nombre" filter="true" filterMatchMode="contains" value="#{gestionMatriculaController.idAlumno}">
                         <f:selectItems itemValue="#{alumnos.idAlumno}" itemLabel="#{alumnos.nombreCompleto}" value="#{gestionMatriculaController.alumnosList}" var="alumnos"></f:selectItems>
@@ -49,15 +45,15 @@
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1" resetValues="true" listener="#{gestionMatriculaController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                    <div class="EmptyBox20"></div>
-                    <p:splitButton value="Otras Opciones" action="#">
-                        <p:menuitem value="Gestionar Docentes">    
+                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Gestionar Docentes" >    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Alumnos">    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Cursos">    
                         </p:menuitem>
-                    </p:splitButton>            
+                    </p:tieredMenu>           
                 </div>
             </h:form>
         </p:panel>
