--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteMatricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteMatricula/index.xhtml
@@ -30,16 +30,16 @@
                     <p:column headerText="Año" >
                         #{car.anio}
                     </p:column>
-                    <p:column headerText="carnet" >
+                    <p:column headerText="Carnet" >
                         #{car.carnet}
                     </p:column>
                     <p:column headerText="Alumno" >
                         #{car.alumno}
                     </p:column>
-                    <p:column headerText="grado" >
+                    <p:column headerText="Grado" >
                         #{car.grado}
                     </p:column>
-                    <p:column headerText="seccion" >
+                    <p:column headerText="Seccion" >
                         #{car.seccion}
                     </p:column>
                     <f:facet name="footer">
