--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpMatriculas.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpMatriculas.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-09-19T08:38:12 -->
+<!-- 2015-09-22T20:43:53 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -22,25 +22,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="71" splitType="Stretch">
-			<staticText>
-				<reportElement x="214" y="0" width="205" height="19" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Centro Escolar San Ramón]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="214" y="12" width="205" height="14" uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Reporte de Matriculas]]></text>
-			</staticText>
-			<image>
-				<reportElement x="5" y="4" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
-				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
-			</image>
+		<band height="73" splitType="Stretch">
 			<textField isBlankWhenNull="true">
 				<reportElement x="60" y="50" width="70" height="20" uuid="d20cf3fb-4fec-4c38-9d51-30c924736b08"/>
 				<textFieldExpression><![CDATA[$P{anio}]]></textFieldExpression>
@@ -49,13 +31,29 @@
 				<reportElement x="20" y="50" width="40" height="20" uuid="f4e12c08-760c-46d5-9bb4-cc3b139a9a74"/>
 				<text><![CDATA[Año:]]></text>
 			</staticText>
-			<textField evaluationTime="Report">
-				<reportElement x="390" y="10" width="190" height="30" uuid="68367d26-22f3-41f5-aa16-af4165bae160"/>
+			<image>
+				<reportElement x="5" y="4" width="105" height="46" uuid="56a242b3-3fe0-495d-a1ff-15dac00741ca"/>
+				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="180" y="1" width="205" height="29" uuid="894a9733-bd60-4b93-8246-4864a9626db4"/>
+				<textElement textAlignment="Center">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Centro Escolar San Ramón
+Reporte de Alumnos]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="386" y="10" width="136" height="30" uuid="9cc0c67c-e099-405f-9d11-0ee7097fb59e"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "+$V{PAGE_COUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="388" y="40" width="190" height="23" uuid="4ef4c651-28e4-4108-b91e-d61b53b75bb7"/>
+				<reportElement x="526" y="10" width="32" height="30" uuid="a31928d4-a260-4953-8203-a4f167c77f7d"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="382" y="53" width="164" height="20" uuid="75bb6e7c-fc1a-40d3-ae69-4b44302311ec"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["F. Generación:"+ $P{fechaGeneracion}]]></textFieldExpression>
 			</textField>
@@ -145,6 +143,7 @@
 	</columnHeader>
 	<detail>
 		<band height="31" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<textField isBlankWhenNull="true">
 				<reportElement x="15" y="0" width="76" height="30" uuid="4a395093-2340-4a1f-b65e-12d3e3d985c6">
 					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
@@ -214,12 +213,6 @@
 			</textField>
 		</band>
 	</detail>
-	<pageFooter>
-		<band height="51" splitType="Stretch"/>
-	</pageFooter>
-	<lastPageFooter>
-		<band height="50"/>
-	</lastPageFooter>
 	<summary>
 		<band height="33">
 			<staticText>
