--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
@@ -33,8 +33,11 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true">
-                    <p:column headerText="Grado" filterBy="#{car.idEvaluacion.idMateria.idGrado.grNombre}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Grado" filterBy="#{car.idEvaluacion.idMateria.idGrado.grNombre}" filterable="true" filterMatchMode="contains" style="width: 50px">
                         #{car.idEvaluacion.idMateria.idGrado.grNombre}
+                    </p:column>
+                    <p:column headerText="carnet" filterBy="#{car.idAlumno.alCarnet}" filterable="true" filterMatchMode="contains" style="width: 80px">
+                        #{car.idAlumno.alCarnet}
                     </p:column>
                     <p:column headerText="Alumno" filterBy="#{car.idAlumno.nombreCompleto}" filterable="true" filterMatchMode="contains">
                         #{car.idAlumno.nombreCompleto}
@@ -42,10 +45,13 @@
                     <p:column headerText="Materia" filterBy="#{car.idEvaluacion.idMateria.maNombre}" filterable="true" filterMatchMode="contains">
                         #{car.idEvaluacion.idMateria.maNombre}
                     </p:column>
+                    <p:column headerText="Evaluación" filterBy="#{car.idEvaluacion.evNombre}" filterable="true" filterMatchMode="contains">
+                        #{car.idEvaluacion.evNombre}
+                    </p:column>
                     <p:column headerText="Tipo de Evaluación" filterBy="#{car.idEvaluacion.evTipo}" filterable="true" filterMatchMode="contains">
                         #{car.idEvaluacion.evTipo}
                     </p:column>
-                    <p:column headerText="Nota" filterBy="#{car.idNota}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Nota" filterBy="#{car.idNota}" filterable="true" filterMatchMode="contains" style="width: 50px">
                         #{car.ntCalificacion}
                     </p:column>
                     <p:column headerText="Tipo de ingreso" filterBy="#{car.ntTipoIngreso}" filterable="true" filterMatchMode="contains">
@@ -63,7 +69,7 @@
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
                 <p:commandButton value="Adicionar Nota" actionListener="#{gestionNotaController.setIndexMenu(1)}"></p:commandButton>
-                <p:commandButton value="Cargar Notas desde Excel" actionListener="#{gestionNotaController.setIndexMenu(4)}"></p:commandButton>
+                <p:commandButton value="Cargar Notas desde Excel" actionListener="#{gestionNotaController.cargarDesdeExcel()}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionNotaController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
