--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/editar.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
+            <p:menuitem value="Gestionar Clase" url="#{siteUrls.programacionClases}"/>
             <p:menuitem value="Modificar Programación de clase"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
