--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/ver.xhtml
@@ -7,79 +7,74 @@
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
-            <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
-            <p:menuitem value="Consultar Expediente"></p:menuitem>
+           <p:menuitem value="Home" url="/"/>
+           <p:menuitem value="Gestionar Clase" url="#{siteUrls.programacionClases}"/>
+            <p:menuitem value="Modificar Programación de clase"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda#{gestionarAlumnosController.indexMenu}').show();"></i>
     </ui:define>
     <ui:define name="content">  
         <div class="EmptyBox5"></div>
-        <p:panel>
-            <h:form id="consultaForm">
+       <p:panel>
+            <h:form enctype="multipart/form-data" >
                 <p:dialog widgetVar="dlgAyuda1" modal="true" appendTo="@(body)" header="Ayuda">
-                    <p:outputLabel value="Esta ayuda sirve un monton Modifica"/>
+                    <p:outputLabel value="Esta ayuda sirve un monton registrar"/>
                 </p:dialog>
-                <p:remoteCommand name="redirect" actionListener="#{gestionarAlumnosController.setIndexMenu(0)}"></p:remoteCommand>
-                <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
-                    <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
-                    <div class="EmptyBox20"></div>
-                    <p:commandButton value="Si" action="#{gestionarAlumnosController.eliminarExpediente()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide();redirect();"></p:commandButton>
-                    <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
-                </p:dialog>
-                <div class="Container10" style="margin-top: 20px;margin-left: 40px;">
-                    <p:outputLabel value="Foto:" class="Container20"></p:outputLabel>
-                </div>
-                <div class="Container70">
-                    <p:graphicImage id="fotoSubida" value="#{gestionarAlumnosController.fotoUsableModifica}" width="100em" cache="false"></p:graphicImage>
-                </div>
-                <div class="EmptyBox20"></div>
-                <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
-                    <p:outputLabel for="carnet" value="Carnet: " class=" Responsive"  ></p:outputLabel>
-                    <p:outputLabel class="Container100" id="carnet"  value="#{gestionarAlumnosController.alumnoModifica.alCarnet}"></p:outputLabel>
-                    <p:outputLabel for="primNombreNuevo" value="Primer Nombre: " class=" Responsive"  ></p:outputLabel>
-                    <p:outputLabel class="Container100" id="primNombreNuevo"  value="#{gestionarAlumnosController.alumnoModifica.alPrimNombre}"></p:outputLabel>
-                    <p:outputLabel for="segNombreNuevo"  value="Segundo Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="segNombreNuevo" value="#{gestionarAlumnosController.alumnoModifica.alSeguNombre}" ></p:outputLabel>
-                    <p:outputLabel for="tercNombreNuevo" value="Tercer Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="tercNombreNuevo" value="#{gestionarAlumnosController.alumnoModifica.alTercNombre}" ></p:outputLabel>
-                    <p:outputLabel for="primApeNuevo" value="Primer Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="primApeNuevo" value="#{gestionarAlumnosController.alumnoModifica.alPrimApe}" ></p:outputLabel>
-                    <p:outputLabel for="segApeNuevo" value="Segundo Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="segApeNuevo" value="#{gestionarAlumnosController.alumnoModifica.alSeguApe}" ></p:outputLabel>
-                    <p:outputLabel for="tercApeNuevo" value="Tercer Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="tercApeNuevo" value="#{gestionarAlumnosController.alumnoModifica.alTercApe}" ></p:outputLabel>
-                    <p:outputLabel for="fechNacimNuevo" value="Fecha de Nacimiento: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="fechNacimNuevo" value="#{formatUtils.getFormatedDate(gestionarAlumnosController.alumnoModifica.alFechaNacimiento)}" ></p:outputLabel>
-                    <p:outputLabel for="emailNuevo" value="Correo electrónico: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="emailNuevo" value="#{gestionarAlumnosController.alumnoModifica.alCorreo}"></p:outputLabel>
-                    <p:outputLabel for="telefonoNuevo" value="Teléfono: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="telefonoNuevo" value="#{formatUtils.getFormatedPhone(gestionarAlumnosController.alumnoModifica.alTelefonoEm1)}"></p:outputLabel>
-                    <p:outputLabel for="celularNuevo" value="Celular: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel class="Container100" id="celularNuevo" value="#{formatUtils.getFormatedPhone(gestionarAlumnosController.alumnoModifica.alTelefonoEm2)}"></p:outputLabel>
-                    <p:outputLabel for="direccion" value="Dirección: " class=" Responsive"></p:outputLabel>
-                    <p:inputTextarea readonly="true" class="Container100" id="direccion" value="#{gestionarAlumnosController.alumnoModifica.alDireccion}"></p:inputTextarea>
+                <p:focus context="p1" id="focus"></p:focus>
+                <p:panelGrid columns="4" class="Container100" id="p1">
+                    <p:outputLabel for="tipoClase" value="Tipo de Clase: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="tipoClase" value="#{programacionClasesController.modifica.clTipo}" class="Contanier10 Responsive">
+                        <f:selectItem itemLabel="Clase en vivo" itemValue="O"></f:selectItem>
+                        <f:selectItem itemLabel="Video Clase" itemValue="V"></f:selectItem>
+                        <f:selectItem itemLabel="Clase Interactiva" itemValue="I"></f:selectItem>
+                    </p:selectOneMenu>                    
+                    <p:outputLabel for="curso" value="Curso: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="curso" value="#{programacionClasesController.modifica.idCurso}" class="Contanier10 Responsive" converter="curso" filter="true" filterMatchMode="contains">
+                        <f:selectItems itemLabel="#{curso.crNombre}" itemValue="#{curso}" value="#{programacionClasesController.cursosList}" var="curso"></f:selectItems>
+                    </p:selectOneMenu>
+                    <p:outputLabel for="tema" value="Tema de Clase: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:inputText id="tema" value="#{programacionClasesController.modifica.clTema}"></p:inputText>
+                    <p:outputLabel for="hora" value="Hora: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:calendar id="hora" value="#{programacionClasesController.modifica.clHora}" timeOnly="true" pattern="hh:mm a" readonlyInput="true"></p:calendar>
+                    <p:outputLabel for="tipoPublic" value="Tipo de publicación: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="tipoPublic" value="#{programacionClasesController.modifica.clTipoPublicacion}">
+                        <f:selectItem itemLabel="Manual" itemValue="M"></f:selectItem>
+                        <f:selectItem itemLabel="Automática" itemValue="A"></f:selectItem>
+                    </p:selectOneMenu>                    
+                    <p:outputLabel for="estadoClase"  value="Estado de Clase: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectOneMenu  id="estadoClase" value="#{programacionClasesController.modifica.clEstado}" class="Contanier10 Responsive">
+                        <f:selectItem itemLabel="No Iniciada" itemValue="N"></f:selectItem>
+                        <f:selectItem itemLabel="Iniciada" itemValue="A"></f:selectItem>
+                        <f:selectItem itemLabel="Terminada" itemValue="T"></f:selectItem>
+                    </p:selectOneMenu>                    
+                </p:panelGrid>
+                <p:panelGrid columns="2" class="Container100">                    
+                    <p:outputLabel for="horario" value="Horario : " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectManyButton id="horario" value="#{programacionClasesController.horarioSelected}">
+                        <f:selectItems var="horarios" value="#{programacionClasesController.horarios}" itemLabel="#{horarios.description}" itemValue="#{horarios.value}"/>
+                    </p:selectManyButton>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
-                <div class="Container100">
-                    <p:commandButton value="Modificar" action="#{gestionarAlumnosController.modificar(gestionarAlumnosController.alumnoModifica)}" immediate="true" >
+                    <div class="Container100">
+                        <p:commandButton value="Modificar" action="#{programacionClasesController.modificar(programacionClasesController.modifica)}" immediate="true" >
                     </p:commandButton>
-                    <p:commandButton value="Eliminar" action="#{gestionarAlumnosController.eliminar(gestionarAlumnosController.alumnoModifica)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                    <p:commandButton value="Eliminar" action="#{programacionClasesController.eliminar(programacionClasesController.modifica)}" onclick="PF('dlgEliminar').show();" immediate="true" >
                     </p:commandButton>
                     <p:commandButton value="Regresar" immediate="true">
-                        <p:ajax update="p1,fotoSubida" resetValues="true" listener="#{gestionarAlumnosController.setIndexMenu(0)}"/>
+                        <p:ajax update="p1" resetValues="true" listener="#{programacionClasesController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
-                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                      <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Gestionar Docentes" >    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Alumnos">    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Cursos">    
                         </p:menuitem>
-                    </p:tieredMenu>            
-                </div>
+                    </p:tieredMenu>         
+                    </div>
+                <div class="EmptyBox20"></div>
             </h:form>
         </p:panel>
     </ui:define>
