--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/index.xhtml
@@ -32,8 +32,8 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true">
-                    <p:column headerText="Carnet" filterBy="#{car.mtCarnet}" filterMatchMode="contains" filterable="true">
-                        #{car.mtCarnet}
+                    <p:column headerText="Carnet" filterBy="#{car.idAlumno.alCarnet}" filterMatchMode="contains" filterable="true">
+                        #{car.idAlumno.alCarnet}
                     </p:column>
                     <p:column headerText="Nombre" filterBy="#{car.idAlumno.nombreCompleto}" filterMatchMode="contains" filterable="true">
                         #{car.idAlumno.nombreCompleto}
