--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
@@ -29,7 +29,7 @@
                 </p:dialog>
                 <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
                     <p:outputLabel for="mod_carne" value="Carnet: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel id="mod_carne" value="#{gestionMatriculaController.matriculaModifica.mtCarnet}"></p:outputLabel>
+                    <p:outputLabel id="mod_carne" value="#{gestionMatriculaController.matriculaModifica.idAlumno.alCarnet}"></p:outputLabel>
                     <p:outputLabel for="mod_nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
                     <p:outputLabel id="mod_nombre" value="#{gestionMatriculaController.matriculaModifica.idAlumno.nombreCompleto}"></p:outputLabel>
                     <p:outputLabel for="mod_grado" value="Grado: " class=" Responsive" ></p:outputLabel>
