--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
@@ -18,25 +18,23 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form enctype="multipart/form-data" >
-                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                    <p:outputLabel value="Esta ayuda sirve un monton"/>
-                </p:dialog>
-                <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                <!--                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                                </p:dialog>
+                                <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>-->
                 <div class="EmptyBox20"></div>
                 <p:panelGrid columns="2" class="Container50 Responsive">
                     <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
                     <p:inputText class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maNombre}"></p:inputText>
-                    <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu  id="estado" class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maEstado}">
-                        <f:selectItem itemValue ="DISPONIBLE" itemLabel="DISPONIBLE"/>
-                        <f:selectItem itemValue="NO DISPONIBLE" itemLabel="NO DISPONIBLE"/>
+                    <p:outputLabel  value="Grado: " class=" Responsive"></p:outputLabel>
+                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.idGrado}">
+                        <f:selectItems itemValue="#{gestionMateriasController.materiaNuevo.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionMateriasController.gradoList}" var="grado"></f:selectItems>
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <p:panelGrid columns="2" class="Container50 Responsive">
                     <p:outputLabel  value="Coordinador: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu  class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maCoordinador}">
-                        <f:selectItem itemValue ="0" itemLabel="Juan Rivera"/>
-                        <f:selectItem itemValue ="1" itemLabel="Carlos Valencia"/>
+                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maCoordinador}">
+                        <f:selectItems itemValue="#{gestionMateriasController.materiaNuevo.maCoordinador}" itemLabel="#{docente.nombreCompleto}" value="#{gestionMateriasController.docentesList}" var="docente"></f:selectItems>
                     </p:selectOneMenu>
                     <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maTurno}">
@@ -44,19 +42,27 @@
                         <f:selectItem itemValue ="VESPERTINO" itemLabel="VESPERTINO"/>
                     </p:selectOneMenu>   
                 </p:panelGrid>
+                <p:panelGrid columns="2" class="Container50 Responsive">
+                    <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
+                    <p:selectOneMenu  id="estado" class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maEstado}">
+                        <f:selectItem itemValue ="DISPONIBLE" itemLabel="DISPONIBLE"/>
+                        <f:selectItem itemValue="NO DISPONIBLE" itemLabel="NO DISPONIBLE"/>
+                    </p:selectOneMenu>
+                </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar"/>
                     <p:commandButton value="Limpiar"/>
                     <p:commandButton value="Cancelar"/>
-                    <p:splitButton value="Otras Opciones" action="#">
-                        <p:menuitem value="Gestionar Secciones">    
+                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Gestionar Secciones" >    
                         </p:menuitem>
                         <p:menuitem value="Programación de clases">    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Clases">
+                        <p:menuitem value="Gestionar Clases">    
                         </p:menuitem>
-                    </p:splitButton>
+                    </p:tieredMenu>
                 </div>
             </h:form>
         </p:panel>
